# Practice

./: MarkdownTest.md  README.md
Doc/: MarkdownTest.md
DrawTriangle/: main.cpp
OpenGL/CrdSystem/: CMakeLists.txt  main.cpp  main2.cpp
OpenGL/CrdSystem/tools/: FindOpenGL.cmake
OpenGL/DrawRectangle/: CMakeLists.txt
OpenGL/DrawRectangle/src/: main.cpp
OpenGL/DrawRectangle/tools/: FindOpenGL.cmake
OpenGL/DrawTriangle/: CMakeLists.txt
OpenGL/HelloOpenGL/: CMakeLists.txt  main.cpp
OpenGL/TextureChange/: main.cpp
OpenGL/TextureChange/tools/: FindGLM.cmake
OpenGL/UseTexture/: CMakeLists.txt  Shader.cpp  glad.c  main.cpp
Others/testAndOr/: CMakeLists.txt  main.cpp
Others/testSocket1/: CMakeLists.txt  client.cpp
TextureChange/: CMakeLists.txt  main.cpp
TextureTest/: CMakeLists.txt  Shader.h  main.cpp
testSocket1/: CMakeLists.txt  main.cpp
